// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DECREMENT 1`] = `
Snapshot Diff:
- Before
+ After

  Object {
-   "count": 0,
+   "count": -1,
  }
`;

exports[`INCREMENT 1`] = `
Snapshot Diff:
- Before
+ After

  Object {
-   "count": 0,
+   "count": 1,
  }
`;

exports[`handle initial state 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;
